# veterinary_diagnostics

./: .gitignore  .output.txt  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  prompt.txt  test.ts  tsconfig.json  turbo.json
.github/: BRANCH_PROTECTION.md
.github/workflows/: protect-main-branch.yml
backend/: pyproject.toml
backend/api/src/: app.service.ts
backend/api_layer/: package.json  tsconfig.json
backend/api_layer/src/: app.module.ts  main.ts
backend/api_layer/src/api_auth/: api.auth.controller.spec.ts  api.auth.controller.ts  api.auth.module.ts
backend/api_layer/src/database/: database.service.ts
backend/apps/auth-service/: README.md  pom.xml
backend/apps/auth-service/src/main/: proto
backend/apps/auth-service/src/main/java/com/veterinary/: HelloGrpcService.java
backend/apps/auth-service/src/main/java/com/veterinary/auth/domain/model/: Credential.java
backend/apps/auth-service/src/main/java/com/veterinary/auth/infrastructure/security/: Argon2Hasher.java
backend/apps/auth-service/src/main/proto/: hello.proto
backend/apps/auth-service/src/test/java/com/veterinary/: HelloGrpcServiceTest.java
backend/apps/user_service/: pyproject.toml
backend/apps/user_service/app/core/: config.py  lifecycle.py
backend/apps/user_service/app/grpc_server/: server.py  service.py
backend/authentication_service/: package.json  tsconfig.json
backend/authentication_service/src/: app.controller.spec.ts  app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/authentication_service/src/auth/: auth.module.ts  auth.service.spec.ts  auth.service.ts
backend/authentication_service/src/config/: kafka.config.ts
backend/authentication_service/src/dto/: user.ts
backend/authentication_service/src/users/: users.module.ts  users.service.ts
backend/libs/common/: pyproject.toml
backend/libs/common/protos/: user.proto
backend/libs/common/protos/auth/: auth.proto
backend/libs/common/protos/user/: profile.proto
backend/libs/common/src/common/: config.py  db.py  logging.py
backend/libs/common/src/common/protos/: user_pb2.py  user_pb2.pyi  user_pb2_grpc.py  user_pb2_grpc.pyi
backend/libs/common/src/python/: pyproject.toml
backend/libs/common/src/python/common/python/: config.py  db.py  generate.py
backend/libs/common/src/python/common/python/stubs/auth/: auth_pb2.py  auth_pb2.pyi  auth_pb2_grpc.py  auth_pb2_grpc.pyi
backend/libs/common/src/python/common/python/stubs/user/: profile_pb2.py  profile_pb2.pyi  profile_pb2_grpc.py  profile_pb2_grpc.pyi
configuration/: package.json
configuration/tsconfig/: base.json
frontend/client/: next.config.ts  package.json  prompt.txt  tsconfig.json
frontend/client/.next/: build-manifest.json  fallback-build-manifest.json  next-server.js.nft.json
frontend/client/.next/cache/: .previewinfo  .rscinfo
frontend/client/.next/dev/: build-manifest.json  prerender-manifest.json  trace
frontend/client/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/client/demo_files/: landing_page_dark.html  landing_page_light.html
shared/: package.json  tsconfig.json
shared/database/: database.module.ts  database.service.ts  index.ts
shared/database/repositories/: user.repository.ts
shared/dto/: auth.provider.ts  user.ts
shared/src/: index.ts
shared/src/database/: database.module.ts  database.service.spec.ts  database.service.ts
shared/src/dto/: auth.provider.ts  user.ts
src/app/: page.tsx
src/components/: GeminiApi.ts  Upload.tsx
src/components/ui/: button.tsx
(+1081 files in other folders)
