[project]
name = "backend"
version = "0.1.0"
description = "Monorepo for microservices backend (Veterinary AI Diagnosis System)"
authors = [{ name = "MrBabylonian", email = "bedirhangilgiler@gmail.com" }]
readme = "README.md"
requires-python = "==3.12.12"
dependencies = ["user-service-python", "common-python"]

[tool.uv.sources]
user-service-python = { workspace = true }
common-python = { workspace = true }
[tool.uv.workspace]
members = ["apps/*", "libs/common/src/python"]