[project]
name = "user-service"
version = "0.1.0"
authors = [
    { name = "MrBabylonian", email = "bedirhangilgiler@gmail.com" }
]
dependencies = [
    "asyncpg >= 0.31.0",        
    "python-dotenv >= 1.2.1",
    "my-common-lib",
]
requires-python = "==3.12.12"

[tool.uv.sources]
my-common-lib = { path = "../../libs/common", editable = true }