[project]
name = "common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrBabylonian", email = "bedirhangilgiler@gmail.com" }
]
requires-python = "==3.12.12"

dependencies = [
    "asyncpg>=0.31.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
    "structlog>=25.5.0",
    "types-protobuf>=6.32.1.20251210",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
