[project]
name = "common-python"
version = "0.1.0"
description = "Common Python utilities and stubs"
authors = [{ name = "MrBabylonian", email = "bedirhangilgiler@gmail.com" }]
requires-python = "==3.12.12"
dependencies = [
  "asyncpg>=0.31.0",
  "grpcio>=1.76.0",
  "grpcio-tools>=1.76.0",
  "pydantic-settings>=2.12.0",
  "structlog>=25.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common"]

[dependency-groups]
dev = [
    "types-grpcio>=1.0.0.20251009",
    "types-protobuf>=6.32.1.20251210",
]



